# game-pwner

./: .gitignore  CMakeLists.txt  README.md
cmake/: PVS-Studio.cmake  common.cmake  dependencies.cmake  properties.cmake  versioning.cmake
lib/: CMakeLists.txt  README.md
lib/bindings/: CMakeLists.txt
lib/bindings/pybind11/: CMakeLists.txt  pwner.cc
lib/bindings/pybind11/std/: filesystem.hh
lib/include/pwner/: common.hh  external.hh  version.hh
lib/include/pwner/deanon/: deanon.hh
lib/include/pwner/process/: IO.hh  Process.hh  Region.hh  Regions.hh
lib/include/pwner/process/IO/: IO.hh  IOCRIU.hh  IOCached.hh  IOMappedFile.hh  IOMappedHeap.hh  IOProcfs.hh
lib/include/pwner/process/handlers/: Criu.hh  IO_helpers.hh  Procfs.hh
lib/include/pwner/scanner/: Matches.hh  MemoryIterator.hh  PointerScanner.hh  PredicateScanner.hh  Value.hh  ValueScanner.hh
lib/include/pwner/scanner/pointer/: scanner_pointer.hh
lib/include/pwner/scanner/value/: match.hh  scanner_value.hh  user_value.hh
lib/include/pwner/wrapper/: OMP.hh  R2.hh  linux_fd.hh  mm_vector.hh  temporary_file.hh
lib/src/: version.cc
lib/src/scanner/: Value.cc  ValueScannerAddress.cc  ValueScannerByteSwath.cc  ValueScannerSequential.cc  ValueScanner_routines.cc
lib/src/scanner/value/: predicate.cc
test/: CMakeLists.txt
test/bindings/pybind11/: main.py
test/scratch/: CMakeLists.txt  MemoryIterator.cc  PointerScannerBackward.cc  PointerScannerForward.cc  PredicateScanner.cc  ValueScanner.cc  ValueScannerByteSwath.cc  ValueScannerSequential.cc  hex.cc  libscratch.cc  libscratch.hh  scanner_pointer_backward.cc  scanner_pointer_forward.cc  scanner_value.cc  scratch.cc  scratch.py  scratch2.cc
test/unit/: CMakeLists.txt  get_region_address.cc  openacc.cc  openmp.cc  process.cc  scanner.cc
tools/: CMakeLists.txt
tools/aad/: aad.py
tools/ad/: CMakeLists.txt  ad.hh  antidebug.hh  main.cc
tools/fakemem/: CMakeLists.txt  main.cc
tools/fakemem/include/: fakemem.hh  generators.hh
tools/fakemem/lib/: fakemem.cc
tools/gui/: CMakeLists.txt  main.py  settings.py
tools/gui/dialogs/: About.py  About.ui  AttachProcDialog.py  AttachProcDialog.ui  Ui_About.py  Ui_AttachProcDialog.py
tools/gui/widgets/: MainWindow.py  MainWindow.ui  Maps.py  Maps.ui  PointerScanner.py  PointerScanner.ui  Ui_ComboQuickFilterView.py  Ui_CutterTreeView.py  Ui_Dashboard.py  Ui_MainWindow.py  Ui_Maps.py  Ui_PointerScanner.py  Ui_StringsWidget.py  Ui_ValueScanner.py  ValueScanner.py  ValueScanner.ui
utils/: hardening-check.pl
